--- a/Registrar.html
+++ b/Registrar.html
@@ -38,6 +38,8 @@
                     <input id="date" type="date">-->
             </ol>
             <br>
+            <li style="color:black">Dirección</li>
+                    <input type="text" name="Direccion " value="Olmedo y Carabobo"> ></li>
             <a href="Vista.html">Enviar</a>
             <a href="">Borrar</a>
     </form>
