--- a/Editar.html
+++ b/Editar.html
@@ -2,13 +2,13 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <link type="text/css" href="estilo1.css" rel="stylesheet"/>
+    <link type="text/css" href="editar.css" rel="stylesheet"/>
     <link rel="shortcut icon" type="image/png"  href="./imagenes/imagen1.png">
 <title>Editar</title>
 </head>
 <body>
     <header>Editar contactos</header>
-    <div align="left"><a href="./Registrar.html" title="Ir la página anterior">Volver a registrar contactos</a></div>
+    <div align="center"><a href="./Registrar.html" title="Ir la página anterior">Volver a registrar contactos</a></div>
     <br>
     <br>
         <h1>Seleccione el contacto a editar</h1>
