--- a/Inicio.html
+++ b/Inicio.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <link type="text/css" href="estilo1.css" rel="stylesheet"/>
-    <link rel="shortcut icon" type="image/png"  href="./imagenes/imagen1.png">
+    <link rel="shortcut icon" type="image/png"  href="./imagenes/agen.png">
 <title>Agenda</title>
 </head>
 <body>
