--- a/Editar.html
+++ b/Editar.html
@@ -24,16 +24,16 @@
             <br>
             <ol>
                 <li style="color:black">Nombres</li>
-                    <input type="text" name="nombre" value="Pablo">
+                    <input type="text" name="nombre" value="Melanin">
             <br>
                 <li style="color:black">Apellidos</li>
-                    <input type="text" name="apellido" value="de Leon">
+                    <input type="text" name="apellido" value="Ganan">
             <br>
                 <li style="color:black">Telefono</li>
-                    <input type="text" name="telefono" value="5896-4585">
+                    <input type="text" name="telefono" value="0992241369">
             <br>
                 <li style="color:black">E-mail</li>
-                    <input type="text" name="email" value="pablodeleon@gmail.com">
+                    <input type="text" name="email" value="melyganan@gmail.com">
             </ol>
             <br>
             <a href="Vista.html">Enviar</a>
